# cc-api-switcher

./: .coverage  .coverage 2  .gitignore  CLAUDE.md  CODE_REVIEW.md  README.md  provider_api  pyproject.toml
docs/: ADR-001-modular-cli-architecture.md  adding-new-commands.md
openspec/: project.md
openspec/changes/archive/2025-11-07-add-kimi-profile/: proposal.md  tasks.md
openspec/changes/archive/2025-11-07-rename-to-cc-api-switcher/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-08-2025-11-08-document-macos-only/: proposal.md  tasks.md
openspec/changes/archive/2025-11-08-2025-11-08-secure-api-keys/: proposal.md  tasks.md
openspec/changes/archive/2025-11-10-expand-global-workflow-tests/: design.md
openspec/changes/archive/2025-11-10-fix-profile-store-api/: proposal.md
openspec/changes/archive/2025-11-10-integrate-backup-global-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-10-refactor-cli-architecture/: proposal.md
openspec/changes/expand-global-workflow-tests/: proposal.md  tasks.md
openspec/changes/fix-profile-store-api/: proposal.md  tasks.md
openspec/changes/refactor-cli-architecture/: design.md  tasks.md
openspec/changes/rename-cli-command-to-cas/: proposal.md  tasks.md
openspec/changes/secure-diff-output/: design.md  proposal.md
openspec/specs/documentation/: spec.md
openspec/specs/profile-management/: spec.md
openspec/specs/provider-detection/: spec.md
openspec/specs/security/: spec.md
openspec/specs/testing/: spec.md
src/cc_api_switcher/: __init__.py  cli.py  config.py  core.py  exceptions.py  global_config.py  migration.py
src/cc_api_switcher/cli/: __init__.py  app.py  base.py  commands.py  config_commands.py  helpers.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_global_config.py
tests/cli/: __init__.py  test_base.py  test_helpers.py
(+17 files in other folders)
